[package]
name = "vm-iggy-relay"
version = "1.0.0"
edition = "2024"
authors = ["Security Engineering"]

[dependencies]
# Async & Observability
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
hex = "0.4"
rand = "0.10"

# Security & TLS
rustls = { version = "0.23", features = ["aws_lc_rs"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }

# Log-Structured Persistence
log = "0.4"
fjall = "3.1" 

# Windows Native Hardening
windows-service = "0.8.1"
winlog = "0.2.6"
widestring = { version = "1.2", features = ["std"] }
windows-sys = { version = "0.61", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_EventLog"
] }

[profile.release]
strip = true          
lto = true            
panic = "abort"       
opt-level = "z"       
codegen-units = 1
